--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@ body {
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header {
@@ -42,6 +45,7 @@ nav a:hover {
 }
 
 .container {
+    flex: 1;
     width: 80%;
     max-width: 1000px;
     margin: 20px auto;
@@ -130,7 +134,7 @@ a.button:hover {
     padding: 20px;
     background-color: #4CAF50;
     color: #fff;
-    position: fixed;
+    position: relative;
     width: 100%;
     bottom: 0;
 }
@@ -149,10 +153,17 @@ a.button:hover {
 
 .produto {
     border: 1px solid #ddd;
-    padding: 15px;
-    margin: 15px 0;
+    padding: 10px;
+    margin: 10px;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+}
+
+.imagem_produto {
+    max-width: 100px;
+    max-height: 100px;
+    margin-right: 10px;
 }
 
 .produto form {
