--- a/styles.css
+++ b/styles.css
@@ -184,3 +184,28 @@ a.button:hover {
 .produto button:hover {
     background-color: #45a049;
 }
+
+.produto-detalhe {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.imagem_produto_detalhe {
+    max-width: 300px;
+    margin-bottom: 20px;
+}
+
+.produto-detalhe h2 {
+    margin-bottom: 10px;
+}
+
+.produto-detalhe p {
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+
+.produto-detalhe form {
+    margin-top: 20px;
+}
